# english-mcp

./: .env  README.md  pyproject.toml
src/english_mcp/: server.py
