[project]
name = "english-mcp"
version = "0.1.0"
description = "写代码学英语"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "httpx>=0.28.1",
 "mcp>=1.4.1",
 "python-dotenv>=1.0.1",
 "openai>=1.6.0",
]
[[project.authors]]
name = "xieguanzhang"
email = "278245181@qq.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
english-mcp = "english_mcp:main"
